# gr-gfdm

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.md  README.md
.github/workflows/: check-formatting.yml  (+1 more)
apps/: CMakeLists.txt
cython/: .gitignore  README.md  gfdm_interface.pxd  gfdm_wrapper.pyx  setup.py
docs/: CMakeLists.txt  README.gfdm
examples/: demo.grc  demo_simple.grc  demo_sync.grc  gfdm_fast_sync_demo.grc  gfdm_file_slicer.grc  gfdm_modulator_demo.grc  gfdm_ota_alt_sync.grc  gfdm_ota_demo.grc  gfdm_ota_rx.grc  gfdm_ota_test.grc  gfdm_replay.grc  gfdm_rx_flowgraph.grc  gfdm_simulation_demo.grc  gfdm_transceiver.grc  gfdm_transceiver.py  gfdm_transceiver_test.grc  gfdm_transceiver_test_ota.grc  hier_energy_burst_detector.grc  hier_gfdm_fastsync.grc  hier_gfdm_receiver.grc  hier_gfdm_receiver_tagged.grc  hier_gfdm_synchronization.grc  hier_gfdm_transmitter.grc  hier_packet_formatter.grc  hier_packet_parser.grc  packetizer_demo.grc  schmidl_and_cox_detector.grc  simple_modulator.grc  top_block.py  usrp_reference_clock_test.grc
grc/: CMakeLists.txt  gfdm_advanced_receiver_cc.xml  gfdm_advanced_receiver_sb_cc.block.yml  gfdm_advanced_receiver_sb_cc.xml  gfdm_advanced_receiver_tsb_cc.xml  gfdm_block_pinching_cyclic_prefixer_cc.xml  gfdm_channel_estimator_cc.block.yml  gfdm_channel_estimator_cc.xml  gfdm_cyclic_prefixer_cc.block.yml  gfdm_cyclic_prefixer_cc.xml  gfdm_extract_burst_cc.block.yml  gfdm_extract_burst_cc.xml  gfdm_frame_energy_detector_cc.block.yml  gfdm_frame_energy_detector_cc.xml  gfdm_framer_cc.xml  gfdm_modulator_cc.block.yml  gfdm_modulator_cc.xml  gfdm_modulator_kernel_cc.xml  gfdm_preamble_generator.block.yml  gfdm_preamble_generator.xml  gfdm_py_channel_estimator_cc.xml  gfdm_receiver_cc.xml  gfdm_remove_prefix_cc.block.yml  gfdm_remove_prefix_cc.xml  gfdm_resource_demapper_cc.block.yml  gfdm_resource_demapper_cc.xml  gfdm_resource_mapper_cc.block.yml  gfdm_resource_mapper_cc.xml  gfdm_short_burst_shaper.block.yml  gfdm_short_burst_shaper.xml  gfdm_simple_modulator_cc.block.yml  gfdm_simple_modulator_cc.xml  gfdm_simple_preamble_sync_cc.block.yml  gfdm_simple_preamble_sync_cc.xml  gfdm_simple_receiver_cc.block.yml  gfdm_simple_receiver_cc.xml  gfdm_sync_cc.block.yml  gfdm_sync_cc.xml  gfdm_transmitter_cc.block.yml  gfdm_transmitter_cc.xml  (+1 more)
include/gfdm/: CMakeLists.txt  add_cyclic_prefix_cc.h  advanced_receiver_cc.h  advanced_receiver_kernel_cc.h  advanced_receiver_sb_cc.h  advanced_receiver_tsb_cc.h  api.h  auto_cross_corr_multicarrier_sync_cc.h  channel_estimator_cc.h  cyclic_prefixer_cc.h  detect_frame_energy_kernel_cl.h  extract_burst_cc.h  frame_energy_detector_cc.h  framer_cc.h  gfdm_kernel_utils.h  gfdm_receiver.h  gfdm_utils.h  improved_sync_algorithm_kernel_cc.h  modulator_cc.h  modulator_kernel_cc.h  preamble_channel_estimator_cc.h  preamble_generator.h  receiver_cc.h  receiver_kernel_cc.h  remove_prefix_cc.h  resource_demapper_cc.h  resource_demapper_kernel_cc.h  resource_mapper_cc.h  resource_mapper_kernel_cc.h  short_burst_shaper.h  simple_modulator_cc.h  simple_preamble_sync_cc.h  simple_receiver_cc.h  sync_cc.h  transmitter_cc.h  transmitter_cvc.h  transmitter_kernel.h
lib/: CMakeLists.txt  add_cyclic_prefix_cc.cc  advanced_receiver_cc_impl.cc  advanced_receiver_cc_impl.h  advanced_receiver_kernel_cc.cc  advanced_receiver_sb_cc_impl.cc  advanced_receiver_sb_cc_impl.h  advanced_receiver_tsb_cc_impl.cc  advanced_receiver_tsb_cc_impl.h  auto_cross_corr_multicarrier_sync_cc.cc  channel_estimator_cc_impl.cc  channel_estimator_cc_impl.h  cyclic_prefixer_cc_impl.cc  cyclic_prefixer_cc_impl.h  detect_frame_energy_kernel_cl.cc  extract_burst_cc_impl.cc  extract_burst_cc_impl.h  frame_energy_detector_cc_impl.cc  frame_energy_detector_cc_impl.h  framer_cc_impl.cc  framer_cc_impl.h  gfdm_kernel_utils.cc  gfdm_receiver.cc  gfdm_utils.cc  improved_sync_algorithm_kernel_cc.cc  modulator_cc_impl.cc  modulator_cc_impl.h  modulator_kernel_cc.cc  preamble_channel_estimator_cc.cc  preamble_generator.cc  qa_gfdm.cc  qa_gfdm.h  receiver2_cc_impl.cc  receiver2_cc_impl.h  receiver_cc_impl.cc  receiver_cc_impl.h  receiver_kernel_cc.cc  remove_prefix_cc_impl.cc  remove_prefix_cc_impl.h  resource_demapper_cc_impl.cc  (+21 more)
python/: CMakeLists.txt  __init__.py  channel_estimator_cc.py  cross_compat_checks.py  gfdm_modulation_test.py  py_channel_estimator_cc.py  qa_advanced_receiver_cc.py  qa_advanced_receiver_sb_cc.py  qa_advanced_receiver_tsb_cc.py  qa_channel_estimator_cc.py  qa_cyclic_prefixer_cc.py  qa_extract_burst_cc.py  qa_frame_energy_detector_cc.py  qa_framer_cc.py  qa_modulator_cc.py  qa_py_channel_estimator_cc.py  qa_pygfdm_module.py  qa_python_bindings.py  qa_receiver_cc.py  qa_remove_prefix_cc.py  qa_resource_demapper_cc.py  qa_resource_mapper_cc.py  qa_short_burst_shaper.py  qa_simple_modulator_cc.py  qa_simple_preamble_sync_cc.py  qa_simple_receiver_cc.py  qa_sync_cc.py  qa_transmitter_cc.py  qa_transmitter_chain_cc.py  qa_transmitter_cvc.py  qa_vc_compatibility_check.py  setup.py
python/bindings/: CMakeLists.txt  advanced_receiver_sb_cc_python.cc  channel_estimator_cc_python.cc  cyclic_prefix_python.cc  cyclic_prefixer_cc_python.cc  demodulator_python.cc  extract_burst_cc_python.cc  modulator_cc_python.cc  modulator_python.cc  preamble_channel_estimator_python.cc  python_bindings.cc  remove_prefix_cc_python.cc  resource_demapper_cc_python.cc  resource_mapper_cc_python.cc  resource_mapper_python.cc  short_burst_shaper_python.cc  simple_modulator_cc_python.cc  simple_receiver_cc_python.cc  transmitter_cc_python.cc
python/bindings/docstrings/: advanced_receiver_sb_cc_pydoc_template.h  channel_estimator_cc_pydoc_template.h  cyclic_prefixer_cc_pydoc_template.h  extract_burst_cc_pydoc_template.h  modulator_cc_pydoc_template.h  remove_prefix_cc_pydoc_template.h  resource_demapper_cc_pydoc_template.h  resource_mapper_cc_pydoc_template.h  short_burst_shaper_pydoc_template.h  simple_modulator_cc_pydoc_template.h  simple_receiver_cc_pydoc_template.h  transmitter_cc_pydoc_template.h
swig/: CMakeLists.txt  gfdm_swig.i  preamble_generator.i
(+43 files in other folders)
